fix layout issue

--- a/src/assets/less/layout.less
+++ b/src/assets/less/layout.less
@@ -357,4 +357,12 @@ body {
     input, select, textarea {
         font-size: 16px !important;
     }
+
+    .app-res-nav .collapse {
+        display: block !important;
+    }
+
+    .app-res-side .hidden-xs {
+        display: block !important;
+    }
 }
