--- a/src/assets/less/nav.less
+++ b/src/assets/less/nav.less
@@ -218,7 +218,7 @@
         .transition-transform(0.2s ease);
     }
 
-    .off-screen {
+    .app-res-side .off-screen {
         position: absolute;
         top: 50px;
         bottom: 0;
@@ -253,6 +253,17 @@
                 z-index: 1020;
             }
         }
+    }
+    .app-res-side .off-screen .bg-dark {
+        width: 100%;
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover, a:focus {
+        color: #fff !important;
+        background-color: #201E1E !important;
+    }
+    .dropdown-menu .divider {
+        background-color: #3E3E3E !important;
     }
 }
 
